Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/certificacao-digital-certsign-dev/certificacao-digital-certsign-dev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: certificacao-digital-certsign-dev
  namespace: certificacao-digital-certsign-dev
  annotations:
    kubernetes.io/ingress.class: registry.pixeon.cloud/certificacao-digital-certsign:latest
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - certificacao-digital-certsign.dev.pixeon.cloud
    secretName: certificacao-digital-certsign-dev
  rules:
  - host: certificacao-digital-certsign.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: certificacao-digital-certsign-dev
          servicePort: 80
